# arwen_rag

./: .gitignore  brain.py  build_db.py  clear_memory.py  config.py  docker-compose.yml  ears.py  init_memory.py  main.py  memory.py  pyproject.toml  tools.py  voice.py
books/: Tolkien_John_Fellowship_of_the Ring.txt  Tolkien_John_The Return_of_the King.txt  Tolkien_John_The_Hobbit.txt  Tolkien_John_The_Silmarillion.txt  Tolkien_John_Two_Towers.txt
